--- a/amazon.html
+++ b/amazon.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amazon Project</title>
-  <link rel="icon" type="images/x-icon" href="images/amazon-title.svg">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Amazon Project</title>
+    <!-- title logo -->
+    <link rel="icon" type="images/x-icon" href="images/amazon-title.svg" />
+
+    <!-- External Css -->
+    <link rel="stylesheet" href="style/amazon.css" />
+    <link rel="stylesheet" href="style/amazon-header.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="#"
+          ><img src="images/amazon-logo-white.png" class="desktop-logo"
+        /></a>
+        <a href="#"
+          ><img src="images/amazon-mobile-logo-white.png" class="mobile-logo"
+        /></a>
+      </div>
+      <div class="amazon-search">
+        <input type="text" placeholder="Search" />
+        <img src="images/icons/search-icon.png" />
+      </div>
+      <div class="right-side">
+        <img src="images/icons/hamburger-menu.png" class="mobile-hamburger" />
+        <p class="return-order">Returns & Orders</p>
+        <div class="amazon-cart">
+          <a href="#"><img src="images/icons/cart-icon.png" /></a>
+          <span class="cart-txt">cart</span>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
