make the add button interactive

--- a/amazon.html
+++ b/amazon.html
@@ -31,6 +31,7 @@
         <p class="return-order">Returns & Orders</p>
         <div class="amazon-cart">
           <a href="#"><img src="images/icons/cart-icon.png" /></a>
+          <div class="cart-quantity js-cart-quantity">0</div>
           <span class="cart-txt">cart</span>
         </div>
       </div>
@@ -38,7 +39,8 @@
     <main>
       <div class="product-grid js-product-grid"></div>
     </main>
-    <script src="js/product.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/products.js"></script>
     <script src="js/amazon.js"></script>
   </body>
 </html>
